--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@moltin/sdk": "github:ynnoj/js-sdk",
+    "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-transform-inline-environment-variables": "^0.3.0",
     "next": "5.0.0",
     "nprogress": "^0.2.0",
