--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@moltin/sdk": "github:ynnoj/js-sdk",
+    "@moltin/sdk": "^3.16.0",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-transform-inline-environment-variables": "^0.3.0",
     "next": "5.0.0",
